fix: inftrastructure improvements
